frame/support/test/tests/pallet_ui/call_no_return.stderr
error: Invalid pallet::call, require return type DispatchResultWithPostInfo
  --> $DIR/call_no_return.rs:17:7
   |
17 |         pub fn foo(origin: OriginFor<T>) {}
   |             ^^
